--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
-# Database
-DATABASE_URL=file:./dev.db
-
-# Google OAuth Credentials (Get from https://console.cloud.google.com/)
-# Instructions:
-# 1. Create a project in Google Cloud Console
-# 2. Enable Google+ API
-# 3. Create OAuth 2.0 credentials
-# 4. Add authorized redirect URI: http://localhost:3000/api/auth/callback/google
-GOOGLE_CLIENT_ID=your_google_client_id_here
-GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+# Database Configuration
+# For SQLite in production, use file:./prisma/dev.db or an absolute path
+# Make sure the directory exists and has write permissions
+DATABASE_URL="file:./prisma/dev.db"
 
 # NextAuth Configuration
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=generate_a_random_secret_key_here
+# Generate a random secret: openssl rand -base64 32
+NEXTAUTH_SECRET="your-nextauth-secret-here"
+NEXTAUTH_URL="http://localhost:3000"
 
-# Gemini API Key (Get from https://makersuite.google.com/app/apikey)
-GEMINI_API_KEY=your_gemini_api_key_here
+# Google OAuth (Optional)
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+# Google Gemini AI API Key
+GEMINI_API_KEY="your-gemini-api-key"
+
+# Node Environment
+NODE_ENV="production"
